--- a/public/css/article-edit.css
+++ b/public/css/article-edit.css
@@ -97,3 +97,87 @@
     font-size: 40px;
     color: rgb(65, 194, 236);
 }
+
+.cover-header {
+    background-color: lightblue;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    border-radius: 5px 5px 0 0;
+    height: 50px;
+}
+
+.video-button {
+    width: 40%;
+    background: none;
+    border: none;
+    outline: none;
+}
+
+.image-button {
+    width: 40%;
+
+    background: none;
+    border: none;
+    outline: none;
+}
+.active-button {
+    border-radius: 5px 5px 0 0;
+    background-color: white;
+    border: 1px solid lightblue;
+    border-bottom: none;
+    height: 100%;
+}
+
+.video-info {
+    width: 95%;
+    height: 170px;
+    margin: 10px auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    border-style: dashed;
+    border-color: lightblue;
+    border-width: thin;
+    cursor: pointer;
+    position: relative;
+}
+.sub-video-info {
+    width: 100%;
+    height: 100%;
+    margin: 10px auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.video-preview {
+    width: 100%;
+    height: 100%;
+    position: relative;
+}
+
+.preview-video {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.video-container {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-between;
+}
+.video-content {
+    display: none;
+}
+
+.video-thumb {
+    width: 100px;
+    height: 100px;
+    object-fit: cover;
+}
