--- a/public/css/create-article.css
+++ b/public/css/create-article.css
@@ -167,6 +167,10 @@
     align-items: center;
     justify-content: space-between;
 }
+.video-content {
+    display: none;
+}
+
 .video-thumb {
     width: 100px;
     height: 100px;
