--- a/public/css/article-edit.css
+++ b/public/css/article-edit.css
@@ -42,7 +42,7 @@
 }
 .select-content {
     width: 100%;
-    height: 160px;
+    min-height: 160px;
     background-color: white;
     display: flex;
     flex-direction: column;
@@ -180,4 +180,8 @@
 
 .invisible {
     display: none;
+}
+
+.active-video {
+    border: 2px solid lightblue;
 }
