--- a/public/css/create-video.css
+++ b/public/css/create-video.css
@@ -36,6 +36,55 @@
     height: 100%;
     position: relative;
 }
+.preview-video {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.preview-image {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+.image-info {
+    width: 95%;
+    height: 180px;
+    margin: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    border-style: dashed;
+    border-color: lightblue;
+    border-width: thin;
+    cursor: pointer;
+    position: relative;
+}
+.icon {
+    font-size: 40px;
+    color: rgb(65, 194, 236);
+}
+
+.image-input {
+    margin: 5px auto;
+}
+
+.sub-image-info {
+    width: 100%;
+    height: 100%;
+    margin: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+.image-preview {
+    width: 100%;
+    height: 100%;
+    position: relative;
+}
+
 .active-video {
     border: 2px solid lightblue;
 }
