--- a/public/css/create-article.css
+++ b/public/css/create-article.css
@@ -156,6 +156,14 @@
     margin: 5px auto;
 }
 
+.inline {
+    display: flex;
+    flex-wrap: wrap;
+}
+.checkbox-inline {
+    margin: 0 15px;
+}
+
 .icon {
     font-size: 40px;
     color: rgb(65, 194, 236);
