--- a/public/css/create-video.css
+++ b/public/css/create-video.css
@@ -70,6 +70,13 @@
     margin: 5px auto;
 }
 
+.inline {
+    display: flex;
+    flex-wrap: wrap;
+}
+.checkbox-inline {
+    margin: 0 15px;
+}
 .sub-image-info {
     width: 100%;
     height: 100%;
