--- a/public/css/broadcast.css
+++ b/public/css/broadcast.css
@@ -61,6 +61,8 @@
 }
 .broadcast-view-container {
     position: relative;
+    width: 100%;
+    height: 100%;
 }
 .bold {
     color: black;
@@ -138,7 +140,6 @@
     display: none;
     align-items: center;
     justify-content: center;
-    background-color: rgba(0, 0, 0, 0.7);
 }
 
 .loader {
