--- a/public/css/broadcast.css
+++ b/public/css/broadcast.css
@@ -14,6 +14,7 @@
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     grid-gap: 10px;
+    margin: 10px 0;
 }
 
 .broadcast-item {
@@ -45,7 +46,10 @@
     position: relative;
     width: fit-content;
 }
-
+.recipient-button {
+    margin-top: 10px;
+    border: 1px solid #2e6da4;
+}
 .recipient-container {
     display: none;
     position: absolute;
@@ -169,4 +173,21 @@
     100% {
         transform: rotate(360deg);
     }
+}
+.tab-container {
+    display: flex;
+}
+
+.tab-item {
+    border: none;
+    outline: none;
+    padding: 10px;
+    font-weight: normal;
+    color: black;
+}
+
+.active-tab {
+    border-radius: 10px 10px 0 0;
+    border: 1px solid #3498db;
+    font-weight: bold;
 }
