--- a/public/css/broadcast.css
+++ b/public/css/broadcast.css
@@ -28,19 +28,19 @@
 }
 .broadcast-item:hover > .remove-item {
     display: flex;
-    align-items: center;
-    justify-self: center;
 }
 
 .remove-item {
     position: absolute;
     top: 5px;
     right: 5px;
-    width: 12px;
-    height: 12px;
+    width: 20px;
+    height: 20px;
     border: none;
     border-radius: 50%;
     display: none;
+    align-items: center;
+    justify-content: center;
     background-color: #232222;
 }
 .remove-icon {
