--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11,7 +11,9 @@ body {
 a {
     text-decoration: none;
 }
-
+html {
+    scroll-behavior: smooth;
+}
 a:hover,
 a:focus {
     text-decoration: none !important;
