--- a/public/css/follower-chat.css
+++ b/public/css/follower-chat.css
@@ -1,17 +1,18 @@
 .recent-message {
-    width: 300px;
+    width: 250px;
     display: flex;
     flex-direction: column;
-    justify-content: center;
     padding: 10px;
     border-radius: 5px;
     background-color: white;
     margin: 10px;
 }
-
+.right {
+    background-color: rgb(224, 232, 239) !important;
+}
 .recent-item {
     display: flex;
-    align-items: center;
+    width: 100%;
     justify-content: space-between;
     padding: 10px;
 }
@@ -40,14 +41,34 @@
 
 .username {
     font-weight: bold;
-    font-size: 13px;
+    font-size: 14px;
 }
 
 .message {
-    font-size: 12px;
+    font-size: 13px;
     color: grey;
 }
 .time {
     color: grey;
-    font-size: 11px;
+    font-size: 12px;
+}
+.user-message {
+    width: 800px;
+    display: flex;
+    flex-direction: column;
+    border-radius: 5px;
+    background-color: white;
+}
+
+.user-message-header {
+    width: 95%;
+    padding: 10px;
+}
+
+.message-container {
+    width: 100%;
+    min-height: 400px;
+    background-color: rgb(224, 232, 239);
+    display: flex;
+    flex-direction: column;
 }
