--- a/public/css/follower-chat.css
+++ b/public/css/follower-chat.css
@@ -10,6 +10,9 @@
 .right {
     background-color: rgb(224, 232, 239) !important;
 }
+.chat-container {
+    display: flex;
+}
 .recent-item {
     display: flex;
     width: 100%;
@@ -43,6 +46,11 @@
     font-weight: bold;
     font-size: 14px;
 }
+.username2 {
+    font-weight: bold;
+    font-size: 14px;
+    margin-left: 10px;
+}
 
 .message {
     font-size: 13px;
@@ -53,7 +61,7 @@
     font-size: 12px;
 }
 .user-message {
-    width: 800px;
+    width: 700px;
     display: flex;
     flex-direction: column;
     border-radius: 5px;
