--- a/public/css/follower-chat.css
+++ b/public/css/follower-chat.css
@@ -110,3 +110,10 @@
     background-color: grey;
     color: white;
 }
+
+.message-left {
+    float: left;
+}
+.message-right {
+    float: right;
+}
