--- a/public/css/follower-chat.css
+++ b/public/css/follower-chat.css
@@ -50,6 +50,7 @@
 .username {
     font-weight: bold;
     font-size: 14px;
+    color: black;
 }
 .username2 {
     font-weight: bold;
@@ -80,6 +81,7 @@
 
 .message-container {
     width: 100%;
+    padding: 20px;
     min-height: 400px;
     background-color: rgb(224, 232, 239);
     display: flex;
@@ -90,16 +92,21 @@
     margin: 0;
     color: grey;
 }
+.message-left {
+    width: 100%;
+    display: flex;
+}
 
-.message-item-left {
+.message-right {
+    width: 100%;
+    display: flex;
+    align-items: flex-end;
+}
+.message-item {
     display: flex;
     width: 100%;
 }
-.message-item-right {
-    display: flex;
-    width: 100%;
-    margin-right: 0;
-}
+
 .message-item-info {
     margin: 0 10px;
 }
@@ -110,10 +117,12 @@
     border: none;
     border-bottom: 1px solid grey;
     text-align: center;
+    width: fit-content;
+    padding: 5px 15px;
 }
 .message-date {
-    padding: 10px;
-    border-radius: 50%;
+    padding: 5px 15px;
+    border-radius: 50px;
     text-align: center;
     margin: 0 auto;
     background-color: grey;
