--- a/public/css/follower-chat.css
+++ b/public/css/follower-chat.css
@@ -86,6 +86,7 @@
     background-color: rgb(224, 232, 239);
     display: flex;
     flex-direction: column;
+    border: 4px solid white;
 }
 
 .icon {
@@ -100,11 +101,11 @@
 .message-right {
     width: 100%;
     display: flex;
-    align-items: flex-end;
+    justify-content: flex-end;
 }
 .message-item {
     display: flex;
-    width: 100%;
+    margin: 30px 0;
 }
 
 .message-item-info {
