--- a/public/css/follower-chat.css
+++ b/public/css/follower-chat.css
@@ -82,11 +82,12 @@
 .message-container {
     width: 100%;
     padding: 20px;
-    min-height: 400px;
+    height: 400px;
     background-color: rgb(224, 232, 239);
     display: flex;
     flex-direction: column;
     border: 4px solid white;
+    overflow-y: scroll;
 }
 
 .icon {
