--- a/public/css/app.css
+++ b/public/css/app.css
@@ -60,3 +60,19 @@ a:focus {
 label {
     font-size: 12px;
 }
+@media only screen and (max-width: 600px) {
+    .left {
+        display: none;
+    }
+    .right {
+        width: 100%;
+    }
+}
+@media only screen and (min-width: 601px) {
+    .toggle-sidebar-button {
+        display: none;
+    }
+    .toggle-sidebar {
+        display: none;
+    }
+}
