--- a/public/css/popup.css
+++ b/public/css/popup.css
@@ -1,84 +1,85 @@
-@keyframes popup{
-    0%{
+@keyframes popup {
+    0% {
         transform: scale(0);
-        opacity:0;
+        opacity: 0;
     }
-    100%{
-        transform:scale(1);
+    100% {
+        transform: scale(1);
         opacity: 1;
     }
 }
-.popup-container{
-    position:absolute;
-    top:100px;
-    left:40%;
-    width:300px;
-    height:450px;
-    border-radius:20px;
-    box-shadow:0 10px 15px -7px black;
-    z-index:2;
-    display:none;
-    background-color:#232223;
-    color:white;
-    font-family:tahoma;
-    animation:popup 0.3s ease-in-out;
+.popup-container {
+    position: absolute;
+    top: 200px;
+    left: 50%;
+    /* bring your own prefixes */
+    transform: translate(-50%);
+    width: 300px;
+    height: 450px;
+    border-radius: 20px;
+    box-shadow: 0 10px 15px -7px black;
+    z-index: 2;
+    display: none;
+    background-color: #232223;
+    color: white;
+    font-family: tahoma;
+    animation: popup 0.3s ease-in-out;
 }
-.popup-title{
-    font-weight:bold;
-    font-size:15px;
+.popup-title {
+    font-weight: bold;
+    font-size: 15px;
     text-align: center;
 }
-.popup-friend-list{
-    width:90%;
-    margin:10px auto;
-    display:flex;
-    flex-direction:column;
-    min-height:300px;
-    max-height:300px;
-    overflow-y:auto;
-
+.popup-friend-list {
+    width: 90%;
+    margin: 10px auto;
+    display: flex;
+    flex-direction: column;
+    min-height: 300px;
+    max-height: 300px;
+    overflow-y: auto;
 }
-.popup-friend-item{
-    display:flex;
+.popup-friend-item {
+    display: flex;
     align-items: center;
 }
-.popup-friend-img{
-    width:50px;
-    height:50px;
-    border:none;
-    border-radius:50%;
-    object-fit:cover;
-    box-shadow:0 10px 15px -7px black;
-    margin:10px;
+.popup-friend-img {
+    width: 50px;
+    height: 50px;
+    border: none;
+    border-radius: 50%;
+    object-fit: cover;
+    box-shadow: 0 10px 15px -7px black;
+    margin: 10px;
 }
-.popup-friend-name{
-    font-weight:bold;
-    font-size:13px;
-}
-
-.popup-filter{
-    width:80%;
-    margin:5px auto;
-    display:flex;
-    align-items: center;
-    justify-content: space-between;
+.popup-friend-name {
+    font-weight: bold;
+    font-size: 13px;
 }
 
-.cb{
-    margin:0 !important;
-    padding:0;
-}
-.popup-button-container{
-    width:80%;
-    margin:auto;
-    display:flex;
+.popup-filter {
+    width: 80%;
+    margin: 5px auto;
+    display: flex;
     align-items: center;
     justify-content: space-between;
 }
-.popup-footer{
-    width:100%;
-    min-height:100px;
-    display:flex;
+
+.cb {
+    margin: 0 !important;
+    padding: 0;
+}
+.popup-button-container {
+    width: 80%;
+    margin: auto;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.popup-footer {
+    width: 100%;
+    min-height: 100px;
+    display: flex;
     flex-direction: column;
     justify-content: space-between;
 }
