--- a/public/css/toggle-sidebar.css
+++ b/public/css/toggle-sidebar.css
@@ -1,7 +1,8 @@
 .toggle-sidebar-button {
-    position: absolute;
+    position: fixed;
     top: 20px;
     right: 20px;
+    z-index: 10;
 }
 .toggle-sidebar {
     display: none;
