--- a/public/css/friend-list.css
+++ b/public/css/friend-list.css
@@ -3,12 +3,6 @@
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
     grid-gap: 5px;
 }
-
-@media only screen and (max-width: 600px) {
-    .list-friends {
-        grid-template-columns: 1fr 1fr;
-    }
-}
 .friend-item {
     margin: 10px;
     width: 150px;
@@ -17,6 +11,16 @@
     border-radius: 20px;
     box-shadow: 0 10px 15px -7px black;
 }
+@media only screen and (max-width: 600px) {
+    .list-friends {
+        grid-template-columns: 1fr 1fr;
+    }
+    .friend-item {
+        width: 130px;
+        height: 230px;
+    }
+}
+
 .item-header {
     width: 100%;
     height: 40%;
