--- a/public/css/toggle-sidebar.css
+++ b/public/css/toggle-sidebar.css
@@ -1,16 +1,55 @@
 .toggle-sidebar-button {
     position: fixed;
-    top: 20px;
+    top: 150px;
     right: 20px;
     z-index: 10;
 }
 .toggle-sidebar {
     display: none;
-    width: 260px;
+    width: 80%;
     height: 100vh;
+    flex-direction: column;
+    align-items: center;
+    top: 0;
+    left: -300px;
+    z-index: 99;
     position: fixed;
-    background-color: aliceblue;
+    background-color: rgba(0, 0, 0, 0.7);
+    -webkit-animation: slide 0.5s forwards;
+    -webkit-animation-delay: 0.5s;
+    animation: slide 0.5s forwards;
+    animation-delay: 0.5s;
 }
+@-webkit-keyframes slide {
+    100% {
+        left: 0;
+    }
+}
+
+@keyframes slide {
+    100% {
+        left: 0;
+    }
+}
+
+.hide {
+    -webkit-animation: slideright 0.5s forwards;
+    -webkit-animation-delay: 0.5s;
+    animation: slideright 0.5s forwards;
+    animation-delay: 0.5s;
+}
+@-webkit-keyframes slideright {
+    100% {
+        left: -300px;
+    }
+}
+
+@keyframes slideright {
+    100% {
+        left: -300px;
+    }
+}
+
 .toggle-sidebar-logo-container {
     width: 100%;
     height: 70px;
@@ -86,4 +125,17 @@
 .toggle-sidebar-item-text {
     margin-left: 15px;
     color: #2b345f;
+}
+
+@media only screen and (max-width: 1000px) {
+    .toggle-sidebar-text {
+        color: white;
+    }
+    .toggle-sidebar-logo {
+        color: orange;
+        font-size: 25px;
+    }
+    .toggle-sidebar-content-header {
+        color: lightblue;
+    }
 }
