--- a/public/css/create-video.css
+++ b/public/css/create-video.css
@@ -12,7 +12,6 @@
     padding: 10px;
     position: relative;
 }
-
 .left-content {
     width: 70%;
     display: flex;
@@ -21,6 +20,19 @@
 }
 .right-content {
     width: 30%;
+}
+
+@media only screen and (max-width: 800px) {
+    .create-container {
+        flex-direction: column;
+        justify-content: initial;
+    }
+    .left-content {
+        width: 100%;
+    }
+    .right-content {
+        width: 100%;
+    }
 }
 
 .inline-form {
