--- a/public/css/video-popup.css
+++ b/public/css/video-popup.css
@@ -20,8 +20,8 @@
     align-items: center;
     justify-content: center;
     border-style: dashed;
-    border-color: rgb(53, 30, 255);
-    border-width: thick;
+    border-color: rgb(98, 124, 255);
+    border-width: 2px;
     cursor: pointer;
 }
 .icon {
@@ -30,6 +30,7 @@
 }
 .upload-text {
     width: 50%;
+    text-align: center;
 }
 
 .video-popup-image {
