--- a/public/css/video-popup.css
+++ b/public/css/video-popup.css
@@ -9,6 +9,7 @@
     width: 200px;
     height: 200px;
     margin: 5px;
+    position: relative;
 }
 
 .inputVideo {
@@ -37,4 +38,28 @@
     width: 100%;
     height: 100%;
     object-fit: cover;
+}
+.video-info {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    background-color: rgba(0, 0, 0, 0.6);
+    opacity: 0;
+}
+
+.video-title {
+    padding: 10px;
+    color: white;
+}
+@keyframes fadeInFromNone {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
+}
+.video-popup-item:hover > .video-info {
+    animation: fadeInFromNone 0.25s ease-in-out;
 }
