--- a/public/css/video-popup.css
+++ b/public/css/video-popup.css
@@ -43,7 +43,8 @@
     position: absolute;
     bottom: 0;
     left: 0;
-    width: 100%;
+    width: 98%;
+    margin: 0 0 2px 2px;
     background-color: rgba(0, 0, 0, 0.6);
     display: none;
 }
