--- a/public/css/video-popup.css
+++ b/public/css/video-popup.css
@@ -66,3 +66,18 @@
     display: initial;
     animation: fadeInFromNone 0.25s ease-in-out;
 }
+.video-popup-percent {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: white;
+    font-size: 13px;
+}
+
+.video-popup-icon {
+    width: 100%;
+    height: 100%;
+    font-size: 40px;
+    color: rgb(65, 194, 236);
+}
