--- a/public/css/create-video.css
+++ b/public/css/create-video.css
@@ -149,3 +149,9 @@
         transform: rotate(360deg);
     }
 }
+.video-popup-icon {
+    display: none;
+    font-size: 40px;
+    color: rgb(65, 194, 236);
+    margin: auto;
+}
