--- a/public/css/create-article.css
+++ b/public/css/create-article.css
@@ -242,3 +242,9 @@
         transform: rotate(360deg);
     }
 }
+.video-preview-icon {
+    display: none;
+    font-size: 40px;
+    color: rgb(65, 194, 236);
+    margin: auto;
+}
